--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\ShopScreen\DoorScript.cs" />
+    <Compile Include="Assets\Scripts\ShopScreen\MainCharacterScript.cs" />
     <Compile Include="Assets\Scripts\TestScript.cs" />
     <Compile Include="Assets\Scripts\TestScript2.cs" />
     <Reference Include="UnityEditor.StandardEvents">
