--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\ShopScreen\DoorScript.cs" />
     <Compile Include="Assets\Scripts\ShopScreen\MainCharacterScript.cs" />
+    <Compile Include="Assets\Scripts\ShopScreen\NPCharacterScript.cs" />
     <Compile Include="Assets\Scripts\ShopScreen\TableScript.cs" />
     <Compile Include="Assets\Scripts\TestScript.cs" />
     <Compile Include="Assets\Scripts\TestScript2.cs" />
