--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Scripts\ShopScreen\NPCharacterScript.cs" />
     <Compile Include="Assets\Scripts\ShopScreen\TableScript.cs" />
     <Compile Include="Assets\Scripts\ShopScreen\TextScript.cs" />
+    <Compile Include="Assets\Scripts\ShopScreen\TypeWritterEffect.cs" />
     <Compile Include="Assets\Scripts\TestScript.cs" />
     <Compile Include="Assets\Scripts\TestScript2.cs" />
     <Reference Include="UnityEditor.StandardEvents">
