--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\Scripts\ShopScreen\MainCharacterScript.cs" />
     <Compile Include="Assets\Scripts\ShopScreen\NPCharacterScript.cs" />
     <Compile Include="Assets\Scripts\ShopScreen\TableScript.cs" />
+    <Compile Include="Assets\Scripts\ShopScreen\TextHolderScript.cs" />
     <Compile Include="Assets\Scripts\ShopScreen\TextScript.cs" />
     <Compile Include="Assets\Scripts\ShopScreen\TypeWritterEffect.cs" />
     <Compile Include="Assets\Scripts\TestScript.cs" />
